class CSVLoader
{
    public List<Surge> LoadCSV(string path)
    {
        // TODO: Read file and create Surge objects
        return new List<Surge>();
    }
}